2013-08-13  Karl Berry  <karl@gnu.org>

	* doc/info-stnd.texi (Variables, Searching Commands): tweak
	wording of search-skip-screen descriptions, etc.

2013-08-12  Patrice Dumas  <pertusus@free.fr>

	* tp/init/chm.pm: sort indices names to get a reproducible output.
	Report by Karl.
	* tp/Texinfo/Structuring.pm: set @command_unnumbered for the toplevel
	@-command if not @top.  Report from Karl.

2013-08-11  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Conventions): add item about form feed processing.

2013-08-11  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Convert/HTML.pm(output): sort when processing renamed
	nodes to have a reproducible error output.  Report by Karl.
	* Texinfo/Convert/Converter.pm(_informative_command_value,
	_informative_command): do not set informative command value if 
	value is not defined.

2013-08-10  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Convert/Line.pm, Texinfo/Convert/Paragraph.pm: preserve 
	spaces coming from the document.
	Do not break words at non-breaking spaces.
	* Pod-Simple-Texinfo/t/Pod-Simple-Texinfo.t: correctly close =over
	with a =back, as reported by newer Pod::Simple.  Report by Karl.
	Mark as TODO the test that changes depending on Pod::Simple version.
	Report by Karl.
	* tp/Texinfo/Parser.pm(_next_text): add a end of line at the end of
	files when there is one missing.  Found out in 
	https://bugzilla.redhat.com/show_bug.cgi?id=950644
	* tp/Makefile.am: reorder alphabetically test input files.  
	Distribute missing test files.
	* tp/t/test_utils.pl(test): allow for marking tests as TODO.  Use
	this facility to mark a test of all_spaces that fails on perl 5.10
	with NEL not being treated the same as in perl 5.14.

2013-08-09  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Convert/DocBook.pm(_protect_text): convert
	formfeed to space instead of simply removing it.

2013-08-09  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\codedashfinish): include an explicit
	space after the \let=, for @code{- a}.