@@ -1,3 +1,10 @@
+2013-08-15  Karl Berry  <karl@gnu.org>
+
+	* install-info/install-info.c (ensure_dirfile_exists): do not
+	translate the ^_ byte; the Italian translation missed it,
+	and it makes more sense to consider it a keyword anyway.
+	Report frmo Thien-Thi Nguyen, 17 May 2013 11:16:41.
+
 2013-08-13  Karl Berry  <karl@gnu.org>
 
 	* doc/info-stnd.texi (Variables, Searching Commands): tweak
